# PolicyLab

./: .env.example  .gitignore  README.md  config.py  index.html  pyproject.toml
api/: main.py
api/routers/: improvements.py  markets.py  metrics.py  municipalities.py  personas.py  simulations.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AddPersonaForm.jsx  CoverageGrid.jsx  MarketCard.jsx  PersonaCard.jsx
frontend/src/pages/: ImprovementsPage.jsx  MetricsPage.jsx  MunicipalityPage.jsx  PersonasPage.jsx  PolicyPage.jsx  ResultsPage.jsx
models/: db.py
services/: cbs.py  improvements.py  llm.py  lmsr.py  metrics.py
workers/: persona_job.py  settings.py  simulation_job.py
